<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/errou"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tentar_novamente"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nao"
            android:layout_marginRight="30dp"/>
        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <ImageButton
                android:id="@+id/button_yes"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:scaleX="2"
                android:scaleY="2"
                android:contentDescription="@string/sim"
                android:src="@mipmap/ic_play"/>

            <TextView
                android:id="@+id/play_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sim"
                android:layout_marginLeft="60dp"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
