<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/dark_background">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cabecalho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/scoreText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_primary"
                    android:text="@string/pontuacao"
                    android:textSize="18sp"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/highScoreText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record"
                    android:textColor="@color/text_primary"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp"/>

                <ImageButton
                    android:id="@+id/clear_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/clear"
                    android:background="?attr/selectableItemBackgroundBorderless"/>
            </LinearLayout>

            <TextView
                android:id="@+id/countdownText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:textColor="@color/text_primary"
                android:textSize="48sp"
                android:layout_marginTop="20dp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/dificult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/dificultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dificuldade"
                    android:textColor="@color/text_primary"
                    android:layout_marginEnd="16dp"
                    android:textSize="16sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp">

                    <Spinner
                        android:id="@+id/difficultySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_background"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="6dp">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_margin="8dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textColor="@color/text_on_button"/>

            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/restartButton"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:scaleX="2"
                    android:scaleY="2"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:contentDescription="@string/restart"
                    android:src="@mipmap/ic_play"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

                <TextView
                    android:id="@+id/play_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/restart"
                    android:layout_marginStart="60dp"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
            </FrameLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rodape"
        android:layout_below="@id/cabecalho"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="6dp">
    <Button
        android:id="@+id/btnShowChallenge"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:text="@string/mostrar_novamente"
        android:visibility="gone" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_background"
        android:gravity="center">

        <GridLayout
            android:id="@+id/optionsGridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:alignmentMode="alignMargins"
            android:useDefaultMargins="true"
            android:layout_gravity="center"/>
    </ScrollView>
    </LinearLayout>
</RelativeLayout>
